--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ dominate==2.5.1
 eventlet==0.25.1
 Flask==1.1.1
 Flask-Assets==2.0
-Flask-Bootstrap==3.3.7.1
+Flask-Bootstrap4==4.0.2
 Flask-Caching==1.8.0
 Flask-Cors==3.0.8
+Flask-FlatPages==0.7.2
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
 git+https://github.com/rayluo/flask-session@0.3.x#egg=flask-session
@@ -21,6 +22,7 @@ Jinja2==2.11.1
 jsmin==2.2.2
 libsass==0.19.4
 Mako==1.1.2
+Markdown==3.2.1
 MarkupSafe==1.1.1
 monotonic==1.5
 python-dateutil==2.8.1
@@ -28,6 +30,7 @@ python-dotenv==0.12.0
 python-editor==1.0.4
 python-engineio==3.12.1
 python-socketio==4.5.0
+PyYAML==5.3.1
 six==1.14.0
 SQLAlchemy==1.3.15
 uWSGI==2.0.18
